# blogcar

./: .env.backup  .gitignore  DEPLOYMENT_SUMMARY.md  EMAIL_SETUP.md  IMPLEMENTACION_EMAIL.md  RENDER_DEPLOYMENT.md  SOLUCION_MODULE_ERROR.md  TROUBLESHOOTING.md  accept-all-changes.sh  build.sh  create_admin.py  debug.sh  env.example  generate_secret_key.py  migrate.sh  pyproject.toml  requirements.txt  start.sh  start_final.sh  start_simple.sh
----/resume/: admin.py  models.py
----/resume/migrations/: 0003_remove_resume_education_remove_resume_experience_and_more.py
.cursor/: keybindings.json  settings.json
main/: create_home_content.py  create_sample_data.py  create_social_media_data.py  update_skill_icons.py
main/contact/: admin.py  models.py  urls.py  views.py
main/contact/management/: __init__.py
main/contact/migrations/: 0001_initial.py  0002_alter_contact_options.py
main/core/: admin.py  context_processors.py  models.py  urls.py  views.py
main/core/migrations/: 0001_initial.py  0002_homecontent.py  0003_navigation_sitesettings.py  0004_navigation_core_naviga_is_acti_e4c617_idx_and_more.py  0005_alter_homecontent_options_alter_navigation_options_and_more.py
main/core/templatetags/: dots_tags.py
main/main/: settings.py  urls.py
main/projects/: admin.py  models.py  urls.py  views.py
main/projects/migrations/: 0001_initial.py  0002_project_slug_category_projects_ca_name_a58939_idx_and_more.py  (+2 more)
main/resume/: admin.py  models.py  urls.py  views.py
main/templates/: base.html
main/terms/: admin.py  models.py  urls.py  views.py
(+24 files in other folders)
